syntax = "proto3";
option java_package = "ds.home.unary";

message ConfirmationRequest{
  string CarPlate = 1;
}

message Confirmation{
  string reservation = 1;
}

service BookConfirmation{
  rpc getConfirmantion(ConfirmationRequest) returns (Confirmation);
}


